bynkc/tests/fixtures/negative/407_match_refined_non_wildcard_inner/input.bynk
commons demo {
  fn f(x: Int) -> Int {
    match x {
      31 where InRange(0, 100) => 1
      _ => 0
    }
  }
}
